Implement currentPlayer getter to return the active player